# Basic_RayTracer

./: CMakeLists.txt  README.md  Scene.cpp  Scene.h  Vec3.cpp  View.h  build.sh  main.cpp  utils.cpp
output/: base.ppm  result.ppm
save/: Image.cpp  Image.h  Scene.cpp  Scene.h  View.cpp  main.cpp  utils.h
